fix: default sticky on mobile not offset correctly

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,9 @@
     position: sticky;
     top: -2.5rem;
     z-index: 2;
+    .is-mobile & {
+        top: -1rem;
+    }
 }
 
 .is-mobile .cm-embed-block:has(> div > .callout[data-callout="note-toolbar"][data-callout-metadata*="mstcky"]) {
